fix asset zindex / NO SCROLL BAR VISIBLE

--- a/components/Pages/Main/Block/MainBlock/MainBlock.module.scss
+++ b/components/Pages/Main/Block/MainBlock/MainBlock.module.scss
@@ -17,6 +17,22 @@
   width: 200px;
 }
 
+.scroll::-webkit-scrollbar {
+  width: 1px;
+  display:none /* width of the entire scrollbar */
+}
+
+.scroll::-webkit-scrollbar-track {
+  display:none
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background-color: blue; /* color of the scroll thumb */
+  border-radius: 20px; 
+  display:none;/* roundness of the scroll thumb */
+  border: 3px solid none; /* creates padding around scroll thumb */
+}
+
 .logo-box {
   margin-left: 6px;
   margin-right: 12px;
