--- a/components/Pages/newChart/newChart.module.scss
+++ b/components/Pages/newChart/newChart.module.scss
@@ -1,18 +1,21 @@
 .scroll::-webkit-scrollbar {
-    width: 5px; /* width of the entire scrollbar */
-    
-  }
+  width: 5px; /* width of the entire scrollbar */
+  display:none;
   
-  .scroll::-webkit-scrollbar-track {
-    border-radius: 0px 10px 10px 0px
-    
-  }
+}
+
+.scroll::-webkit-scrollbar-track {
+  display:none;
+  border-radius: 0px 10px 10px 0px
   
-  .scroll::-webkit-scrollbar-thumb {/* color of the scroll thumb */
-    border-radius: 20px; /* roundness of the scroll thumb */
-    background:grey
-    
-  }
+}
+
+.scroll::-webkit-scrollbar-thumb {/* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  display:none;
+  background:grey
+  
+}
 
 @media screen and (max-width: 1480px) {
     .scroll{
